--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -188,6 +188,10 @@ header {
     }
 }
 
+.element {
+    color: #fff;
+}
+
 #menu {
     &.active {
         display: block;
@@ -373,6 +377,7 @@ footer {
     }
 
     h2 {
+        height: 1.75em;
         color: #A3C586;
         font-weight: 500;
         font-size: 2.25em;
@@ -780,11 +785,11 @@ footer {
         border-radius: 4px;
         border: none;
         margin-bottom: 10px;
-        background: $accent-color;
-        color: #fff;
+        background: #fff;
+        color: #036;
         @include transition();
         @include placeholder {
-            color: #fff;
+            color: #036;
         }
 
         &:focus {
