--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -188,9 +188,6 @@ header {
     }
 }
 
-.element {
-    color: #fff;
-}
 
 #menu {
     &.active {
@@ -457,7 +454,7 @@ footer {
     }
 
     p {
-        color: $text;
+        color: #374054;
         margin: 0;
     }
 }
@@ -631,7 +628,7 @@ footer {
         color: $text;
         clear: both;
         font-weight: 500;
-        margin: 0 0 15px 0;
+        margin: 0 0 5px 0;
     }
 
     p, ul {
