--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -690,7 +690,28 @@ footer {
         color: $text;
         margin: 0 0 15px 0;
         font-size: 0.9em;
+
     }
+}
+
+#safe {
+    padding-left: 8%;
+    padding-right: 8%;
+}
+
+#chat {
+    padding-left: 8%;
+    padding-right: 8%;
+}
+
+#lit {
+    padding-left: 8%;
+    padding-right: 8%;
+}
+
+.space {
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .no-image {
